unpackaged/main/default/objects/Legal_Tracking_Approval__c/Legal_Tracking_Approval__c.object-meta.xml
<CustomObject>
    <label>Legal Tracking Approval</label>
    <nameField>
        <displayFormat>LTA-{0000}</displayFormat>
        <label>Legal Tracking Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Tracking Approval</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>