unpackaged/main/default/objects/Legal_Tracking_Approval__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <label>Approver</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alice Hill</fullName>
            </value>
            <value>
                <fullName>Art Cooley</fullName>
            </value>
            <value>
                <fullName>Brenda Mallory</fullName>
            </value>
            <value>
                <fullName>Charles Hamilton</fullName>
            </value>
            <value>
                <fullName>Lynn Goldman</fullName>
            </value>
            <value>
                <fullName>Richard Lazarus</fullName>
            </value>
            <value>
                <fullName>Richard Stewart</fullName>
            </value>
            <value>
                <fullName>Sarah Light</fullName>
            </value>
            <value>
                <fullName>Seema Kakade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>